--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo">
                 <img src="Images\tempLogo2.png">
-                <a href="#">Pai</a>
+                <a href="https://prajwalpai21.github.io/Pai/">Pai</a>
             </div>
             <div class="nav-links">
                 <a href="#">Home</a>
@@ -21,7 +21,7 @@
                 <a href="https://prajwalpai21.blogspot.com/" target="_blank">Blog</a>
                 <a href="https://www.linkedin.com/in/prajwal-pai21/" target="_blank">LinkedIn</a>
             </div>
-            <a href="https://github.com/PrajwalPai21/MainProjects" target="_blank">
+            <a href="https://github.com/PrajwalPai21?tab=repositories" target="_blank">
                 <button><i class="ri-github-fill"></i>My Projects</button>
             </a>
 
@@ -135,9 +135,9 @@
             </div>
 
             <div class="item">
-                <a href="#">Explore my Work</a>
+                <a href="https://prajwalpai21.github.io/Pai/">Explore my Work</a>
                 <p>Explore my Portfolio Website to see what kind of work i can do for you. (This is my Portfolio Website)</p>
-                <button>View my Work</button>
+                <a href="https://prajwalpai21.github.io/Pai/"><button>View my Work</button></a>
             </div>
         </div>
     </div>
@@ -154,3 +154,4 @@
 </html>
 
     <!-- Add a Explore My Interests section -->
+     
